# lightning_ocr

./: .gitignore  Makefile  README.md  pyproject.toml  test.ipynb  test3.ipynb
examples/: 0_create_dataset.ipynb  1_train_abinet.ipynb  2_export_abinet_onnx.ipynb
lightning_ocr/datasets/: __init__.py  data_module.py  hf_ocr_dataset.py  recog_text_dataset.py
lightning_ocr/dictionary/: dictionary.py  fast_tokenizers.py  tokenization_mgp_str.py
lightning_ocr/metrics/: __init__.py  base.py  recog_metric.py
lightning_ocr/mmocr_compatible/: abinet.py
lightning_ocr/models/: README.md  __init__.py  abinet.py  base.py  encoder_decoder_recognizer.py  mgp-str.py  mgp_str.py  trocr.py
lightning_ocr/models/backbones/: resnet_abi.py
lightning_ocr/models/decoders/: abi_vision_decoder.py
lightning_ocr/models/encoders/: abi_encoder.py
lightning_ocr/models/module_losses/: abi_module_loss.py  base.py  (+1 more)
lightning_ocr/onnx/: abinet.py  base.py  mgp_str.py  processor.py  tokenizer.py
lightning_ocr/tokenizer/: __init__.py  fast_tokenizers.py  tokenization_mgp_str.py
tests/backbones/: test_resnet31_ocr.py  test_resnet_abi.py
tests/decoders/: test_abi_vision_decoder.py  test_position_attention_decoder.py
tests/dictionary/: test_dictionary.py
tests/encoders/: test_abi_encoder.py  test_channel_reduction_encoder.py
tests/losses/: test_abi_module_loss.py  test_ce_module_loss.py
tests/metrics/: test_recog_metric.py
tests/models/: test_resnet_abi.py  test_transformer_module.py
tests/modules/: test_transformer_module.py
tests/postprocessors/: test_attn_postprocessor.py  test_base_textrecog_postprocessor.py  test_ctc_postprocessor.py
(+15 files in other folders)
